# ChangeLog for app-misc/pki-setup
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Feb 2010; <slep@gentoo.org> +pki-setup-1.3.3.ebuild:
  version bump

  13 Feb 2010; <slep@gentoo.org> +pki-setup-1.3.0.ebuild:
  initial commit

*pki-setup-1.3.3 ( 13 Feb 2010 )

*pki-setup-1.3.0 ( 13 Feb 2010 )


 09 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  recommit

  28 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +pki-setup-1.2.0.ebuild, +metadata.xml:
  initial commit

*pki-setup-1.2.0 ( 28 Oct 2009 )