@@ -1,8 +1,4 @@
-DIST pki-setup-1.2.0-1.fc11.src.rpm 62165 RMD160 e25be010ef04bf33c03de307b8158edb76b0408c SHA1 1996bc931991a9d6193efdee72871907322bd542 SHA256 d836ed3c12435b32e52c5aec74b74aab3dc6953c944f5b6e1e5034facac83336
-DIST pki-setup-1.3.0.tar.gz 50841 RMD160 83ec83cc9442567c1a879237d6973f97ccde2cf0 SHA1 9d363872b283edbd8d719ccb11fd952e8a496482 SHA256 a05180f968a736fc212443b72301b0ada3ecc66e740c5bb27b5eeda3f4187f8c
 DIST pki-setup-1.3.3.tar.gz 52477 RMD160 6f5ea78f1926c212ebcab1a61385b651ca3d25f6 SHA1 89aab63901fd0e0e972c00b88e222909db88d466 SHA256 75f6da75cdd14fcbf02c58a8980a4b13eccaeb8c36525bd4ddd4a9dd468039d9
-EBUILD pki-setup-1.2.0.ebuild 532 RMD160 3148c210997cd66ef6962b750c9a6d7c71753bc5 SHA1 f8eaa1f8dc939b256179cc3c1b9bbd27113f6dc4 SHA256 fbbd8aed407ebce2bae41fd34642431a4562c77ec3d39e57bc45c4cd78bfe8be
-EBUILD pki-setup-1.3.0.ebuild 590 RMD160 f0c315f9aa7ea62ea2d7e766e0772d53b8d78668 SHA1 dbbaaa30d111a51eba21f4003102d2e431a3cbc1 SHA256 26da9908b6cf2c8951a3f66f88759610651df0de3cc38560d61baa90c4adaa83
 EBUILD pki-setup-1.3.3.ebuild 590 RMD160 f0c315f9aa7ea62ea2d7e766e0772d53b8d78668 SHA1 dbbaaa30d111a51eba21f4003102d2e431a3cbc1 SHA256 26da9908b6cf2c8951a3f66f88759610651df0de3cc38560d61baa90c4adaa83
-MISC ChangeLog 548 RMD160 a20ba9cd025238ebe3c55d1ee72c1bbd05d3d064 SHA1 bafa17041fcee7b07f51e7c33c26e06b55ed63ef SHA256 94bdcd977ef2f56371ab4c774d8d4073998133fbbe38a82e2b500b7b3060f8d4
+MISC ChangeLog 674 RMD160 d2a96e666bdb9adb2d5e73c9bd379fdabbb7cdb0 SHA1 fd087d2f0c04ef57491f175855eec8c67899ba36 SHA256 12c64d144f3d0a0b4ce05a826d2f8b69a20ec0c62b81ad93615f163cc2ccbc1f
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
