@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -pki-setup-1.2.0.ebuild, -pki-setup-1.3.0.ebuild:
+  remove old ebuild
+
   13 Feb 2010; <slep@gentoo.org> +pki-setup-1.3.3.ebuild:
   version bump
 
